샘플 서블릿 추가

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -17,6 +17,16 @@
   	<servlet-name>welcome</servlet-name>
   	<url-pattern>/welcome</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+  	<servlet-name>sample</servlet-name>
+  	<servlet-class>com.hanbit.jsp.SampleServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>sample</servlet-name>
+  	<url-pattern>/sample</url-pattern>
+  </servlet-mapping>
   
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
