--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 }
 
 dependencies {
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+	
 	providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 	
     testCompile group: 'junit', name: 'junit', version: '4.+'
